// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refresh can be refreshed 1`] = `
<Text
  refresh={[Function]}
  refreshing={true}
>
  Some moar text
</Text>
`;

exports[`refresh can be refreshed 2`] = `
<Text
  refresh={[Function]}
  refreshing={true}
>
  Some moar text
</Text>
`;

exports[`refresh can be refreshed 3`] = `
<Text
  refresh={[Function]}
  refreshing={true}
>
  Some moar text
</Text>
`;

exports[`refresh can be refreshed 4`] = `
<Text
  refresh={[Function]}
  refreshing={false}
>
  Some moar text
</Text>
`;

exports[`refresh renders the refreshed component 1`] = `
<Text
  refresh={[Function]}
  refreshing={false}
  testID="test"
>
  This is text
</Text>
`;
